# alphascope

./: .env.example  .gitignore  COMANDOS_INICIO.md  Dockerfile  LICENSE  README.en.md  README.md  RELATORIO_COMPLETO_ALPHASCOPE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt  setup_dirs.py
alembic/: env.py
docs/: README.md  RELATORIO_GERAL_PROJETO.md  REPORTS_INDEX.md  TELEGRAM_COMMANDS.md
frontend/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
project_audit/: 00_EXECUTIVE_SUMMARY.md  01_PROJECT_MAP.md  02_ARCHITECTURE_REAL.md  03_RUNTIME_AND_OPERATIONS.md  04_DATA_AND_STORAGE.md  05_AI_STACK.md  06_API_DASHBOARD_AND_INTEGRATIONS.md  07_GAPS_RISKS_AND_TECH_DEBT.md  08_COMMANDS_REFERENCE.md  09_FILES_FOR_AI_CONTEXT.md  10_FINAL_CONSOLIDATED_CONTEXT.md  INDEX.md
scripts/: backup_database.sh  iniciar_alphascope_manha.ps1  iniciar_alphascope_real_10_pares.ps1  setup_environment.ps1  start_services.sh
tests/: README.md  conftest.py  test_automation_scheduler.py  test_backtest.py  test_cli_hierarchical.py  test_continuous_pipeline.py  test_daemon_runner.py  test_dataset_validators.py  test_deploy_configuration.py  test_env_examples.py  test_env_parsing.py  test_external_data.py  test_features.py  test_gdelt_resilience.py  test_import_smoke.py  test_ingestion.py  test_live_simulator.py  test_live_trading.py  test_market_dataset_builder_large.py  test_market_sentiment_sources.py  test_market_universe_auto.py  test_ml_market.py  test_multi_agent_api.py  test_multi_agent_cli.py  test_multi_agent_runtime.py  (+17 more)
(+548 files in other folders)
