[project]
name = "alphascope"
version = "0.1.0"
description = "AlphaScope V1: plataforma quantitativa modular para cripto"
authors = [{ name = "AlphaScope Team" }]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-binance>=1.0.19",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "pytest>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "textual>=0.79.0",
    "psutil>=6.0.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "prometheus-client>=0.20.0",
    "PyYAML>=6.0.2",
]
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
alphascope = "alphascope.cli:main"
alphascope-cc = "alphascope.control_center_cli:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alphascope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q -p no:cacheprovider"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
